k8s/kind/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-hosts-deploy
  name: mysql-hosts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-hosts-deploy
  template:
    metadata:
      labels:
        app: mysql-hosts-deploy
    spec:
      containers:
      - image: mysql:8.0.25
        imagePullPolicy: IfNotPresent
        name: mysql-hosts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-properties-deploy
  name: mysql-properties-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-properties-deploy
  template:
    metadata:
      labels:
        app: mysql-properties-deploy
    spec:
      containers:
      - image: mysql:8.0.25
        imagePullPolicy: IfNotPresent
        name: mysql-properties
