k8s/kind/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static-files-deploy
  name: static-files-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-files-deploy
  template:
    metadata:
      labels:
        app: static-files-deploy
    spec:
      containers:
      - image: local/static-files
        imagePullPolicy: Never
        name: static-files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-read-deploy
  name: redis-read-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-read-deploy
  template:
    metadata:
      labels:
        app: redis-read-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--replicaof"
          - "redis-write-service.default.svc.cluster.local"
          - "6379"
          - "--protected-mode"
          - "no" 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-write-deploy
  name: redis-write-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-write-deploy
  template:
    metadata:
      labels:
        app: redis-write-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--protected-mode"
          - "no"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: properties-api-deploy
  name: properties-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: properties-api-deploy
  template:
    metadata:
      labels:
        app: properties-api-deploy
    spec:
      containers:
      - image: local/properties-api
        imagePullPolicy: Never
        name: properties-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hosts-api-deploy
  name: hosts-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hosts-api-deploy
  template:
    metadata:
      labels:
        app: hosts-api-deploy
    spec:
      containers:
      - image: local/hosts-api
        imagePullPolicy: Never
        name: hosts-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-data-api-deploy
  name: get-data-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-data-api-deploy
  template:
    metadata:
      labels:
        app: get-data-api-deploy
    spec:
      containers:
      - image: local/get-data-api
        imagePullPolicy: Never
        name: get-data-api
